@@ -78,6 +78,7 @@ public: // should be private!
   static void damage(int d) {damage_ = d;}
 
   static void (*idle)();
+  static void (*awake_cb)(void *);
 
   static const char* scheme_;
   static Fl_Image* scheme_bg_;
@@ -266,6 +267,7 @@ public:
   static void lock();
   static void unlock();
   static void awake(void* message = 0);
+  static void set_awake_cb(void (*cb)(void *)) { awake_cb = cb; }
   static void* thread_message();
 
   // Widget deletion:
