@@ -229,7 +229,7 @@ widths. Full functionality is not available under Windows 95, 98,
 and Me due to the reduced drawing functionality these operating
 systems provide.
 
-<h4>void fl_line_style(int style, int width=0, char* dashes=0)</h4>
+<h4><A NAME="fl_line_style">void fl_line_style(int style, int width=0, char* dashes=0)</A></h4>
 
 <P>Set how to draw lines (the "pen").  If you change this it is your
 responsibility to set it back to the default with
