@@ -4,7 +4,7 @@
 </HEAD>
 <BODY>
 
-<H1 ALIGN="RIGHT"><A NAME="tests">I - Tests and Demo Source Code</A></H1>
+<H1 ALIGN="RIGHT"><A NAME="examples">I - Tests and Demo Source Code</A></H1>
 
 <P ALIGN="RIGHT">March 19, 2005</P>
 
