@@ -335,8 +335,8 @@ make
 	<DD><A href="mailto:fltk-bugs@fltk.org">fltk-bugs@fltk.org</A> [for
 	reporting bugs]
 
-	<DT>News</DT>
-	<DD><A HREF="news://news.easysw.com">news.easysw.com</A></DD>
+	<DT>NNTP Newsgroups</DT>
+	<DD>news.easysw.com</DD>
 
 </DL>
 
