@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.8
 
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578)
+	- Added Fl::set_awake_cb() to set a handler for thread
+	  messages (STR #1536)
 	- Added "mute sound" option to Sudoku game.
 	- Updated the bundled zlib to v1.2.3.
 	- Updated the bundled libpng to v1.2.16.
